--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
+    "jsonwebtoken": "^9.0.0",
     "mariadb": "^3.1.2"
   },
   "devDependencies": {
