--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express-rate-limit": "^6.7.0",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
-    "mariadb": "^3.1.2"
+    "mariadb": "^3.1.2",
+    "socket.io": "^4.6.1"
   },
   "devDependencies": {
     "dotenv": "^16.0.3"
